--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
+#header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+}
+
+#header h1 {
+  margin: 0;
+}
+
+#nav {
+  width: 0;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  transition: 0.5s;
+  overflow: hidden;
+}
+
+#nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+#nav li {
+  display: block;
+  margin-bottom: 10px;
+}
+
+#nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#content {
+  margin: 20px;
+}
 
