--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,38 @@
+@font-face {
+  font-family: sans-serif;
+  src: url(Helvetica.ttf);
+}
+
+div {
+  font-family: sans-serif;
+}
+
+@font-face {
+  font-family: sans-serif;
+  src: url(Helvetica-Bold.ttf);
+  font-weight: bold;
+}
+
+div {
+  font-family: sans-serif;
+}
+
+@font-face {
+  font-family: sans-serif;
+  src: url(helvetica-light-587ebe5a59211.ttf);
+  font-weight: lighter;
+}
+
+div {
+  font-family: sans-serif;
+}
+
+
 #header {
   background-color: #333;
   color: #fff;
   padding: 20px;
+  font-family: sans-serif;
 }
 
 #header h1 {
