--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: sans-serif;
   src: url(Helvetica.ttf);
+  font-weight: normal;
 }
 
 div {
@@ -32,11 +33,11 @@ div {
   background-color: #333;
   color: #fff;
   padding: 20px;
-  font-family: sans-serif;
 }
 
 #header h1 {
   margin: 0;
+  font: normal;
 }
 
 /* Dropdown Button */
@@ -47,6 +48,7 @@ div {
   font-size: 16px;
   border: none;
   cursor: pointer;
+  font: normal;
 }
 
 /* Dropdown button on hover & focus */
@@ -76,6 +78,7 @@ div {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  font: normal;
 }
 
 /* Change color of dropdown links on hover */
