--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ div {
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: #3498DB;
+  background-color: #ffff;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -53,7 +53,7 @@ div {
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background-color: #ffff;
 }
 
 /* The container <div> - needed to position the dropdown content */
