--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,11 @@ div {
   margin: 20px;
 }
 
+.centerimg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  height: 400px;
+}
+
