--- a/styles.css
+++ b/styles.css
@@ -97,13 +97,7 @@ div {
 #Images {
   inline-size: auto;
   border-image: round;
-}
-
-.centerimg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 300px;
-  height: 400px;
+  width: 640;
+  height: 240;
 }
 
