--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,10 @@
   font-weight: normal;
 }
 
-div {
-  font-family: sans-serif;
-}
-
 @font-face {
   font-family: sans-serif;
   src: url(Fonts/Helvetica-Bold.ttf);
   font-weight: bold;
-}
-
-div {
-  font-family: sans-serif;
 }
 
 @font-face {
@@ -24,21 +16,16 @@ div {
   font-weight: lighter;
 }
 
-div {
+body {
   font-family: sans-serif;
 }
 
-
-#header {
+h1 {
+  margin: 0;
+  font: normal;
   background-color: #333;
   color: #fff;
   padding: 20px;
-  font: normal;
-}
-
-#header h1 {
-  margin: 0;
-  font: normal;
 }
 
 /* Dropdown Button */
